--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.23.24",
     "html-react-parser": "^5.1.18",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -71,7 +72,7 @@
     "sonner": "^1.5.0",
     "stripe": "^17.1.0",
     "swiper": "^11.2.1",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
